# action_game

./: .gitignore  CMakeLists.txt  default.cfg  install.sh  readme.md
src/: default.cfg  main.cpp
src/core/: Entity.cpp  Entity.h  Game.cpp  Game.h  Input.cpp  Input.h  Player.cpp  Player.h  RenderWindow.cpp  RenderWindow.h
src/core/graphic/: FrameRate.cpp  FrameRate.h
src/framework/: Camera.cpp  Camera.h  Config.cpp  Config.h  Entity.cpp  Entity.h  Game.cpp  Initialization.cpp  Input.cpp  Input.h  Player.cpp  Player.h  PlayerController.cpp  PlayerController.h  RenderWindow.cpp  RenderWindow.h  Shoot.cpp  Shoot.h  Stage.cpp  Stage.h  Start.cpp  Start.h
src/framework/graphic/: FrameRate.cpp
src/game/: Configuration.cpp  Configuration.h  ConfigurationGame.h  Game.cpp  Game.h  InputGame.h  Player.cpp  Stage.cpp  Stage.h
